--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\362. sornál tartok
+##\\379. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -360,23 +360,23 @@ DarknetConnectionsToadlet.listenOnly=Nem kapcsolódott és csak figyel: Ezekhe a
 DarknetConnectionsToadlet.listenOnlyShort=Csak figyel
 DarknetConnectionsToadlet.listening=Nem kapcsolódott, de figyel: this node won't try to connect to these peers very often because the user has set BurstOnly on it.
 DarknetConnectionsToadlet.listeningShort=Listening
-DarknetConnectionsToadlet.locationTitle=Location
-DarknetConnectionsToadlet.myFriends=My Friends (trusted peers added by me)
-DarknetConnectionsToadlet.myReferenceHeader=${linkref}My Node Reference${/linkref} (${linktext}as text${/linktext})
-DarknetConnectionsToadlet.nameClickToMessage=The node's name. Click on the name link to send the node a N2NTM (Node To Node Text Message)
-DarknetConnectionsToadlet.nameTitle=Name
-DarknetConnectionsToadlet.neverConnected=Never Connected: Freenet has never connected to these peers.
-DarknetConnectionsToadlet.neverConnectedShort=Never connected
+DarknetConnectionsToadlet.locationTitle=Elhelyezkedés
+DarknetConnectionsToadlet.myFriends=Barátaim (Megbízható emberek, akiket én adtam hozzá)
+DarknetConnectionsToadlet.myReferenceHeader=${linkref}Az én node-referenc-em${/linkref} (${linktext}szövegként${/linktext})
+DarknetConnectionsToadlet.nameClickToMessage=A kliens neve. Kattints a névre ,hogy üzenetet tudd küldeni. N2NTM (Node To Node Text Message)
+DarknetConnectionsToadlet.nameTitle=Név
+DarknetConnectionsToadlet.neverConnected=Sohasem kapcsolódott: Freenet soha nem kapcsolódott ehhez a peer-hez.
+DarknetConnectionsToadlet.neverConnectedShort=Sohasem kapcsolódott
 DarknetConnectionsToadlet.noderefLink=noderef
-DarknetConnectionsToadlet.noPeersWithHomepageLink=Freenet can not work as you have not added any peers so far. Please go to the ${link}node homepage${/link} and read the top infobox to see how it is done.
-DarknetConnectionsToadlet.noRefOrURL=Could not detect either a node reference or a URL. Please try again.
-DarknetConnectionsToadlet.nodePortsTitle=Ports used by your Freenet node
-DarknetConnectionsToadlet.notConnected=Not connected: No connection so far but this node is continuously trying to connect.
-DarknetConnectionsToadlet.notConnectedShort=Disconnected
-DarknetConnectionsToadlet.noTrustLevelAddingFriendTitle=You must set a trust level for your friend's node
-DarknetConnectionsToadlet.noTrustLevelAddingFriend=You must set a trust level - LOW, NORMAL or HIGH. This is simply how much you trust this friend. Higher trust levels give better performance but also less security if the friend decides to attack you, e.g. to try to find out what you are doing on Freenet. If your friend is only a casual acquaintance you might want to set LOW; if you trust them completely you should set HIGH. If you know they don't look after their computer properly and constantly get viruses etc you should reduce it a bit since it might not be them you are connecting to but somebody who has broken into their computer!
-DarknetConnectionsToadlet.noVisibilityLevelAddingFriendTitle=You must set a visibility level for your friend's node
-DarknetConnectionsToadlet.noVisibilityLevelAddingFriend=You must set a visibility level for your friend - YES (your other friends can see them, provided they also have YES), NAME ONLY (they can see the name of the peer and offer to get connected if they know each other), or NO (your other friends cannot see this node). Making your friends visible to your friends improves performance and makes it easier to get connected both to Freenet and to people you know once you are on Freenet.
+DarknetConnectionsToadlet.noPeersWithHomepageLink=Freenet nem tud működni, ha nem adsz hozzá klienseket. Kérjük nézd meg a ${link}node homepage${/link} és olvasd el felül az információs box-ban megjelenő utasítást, hogy jól működjön.
+DarknetConnectionsToadlet.noRefOrURL=Nem tudtunk érzékelni sem a node reference-t sem az URL-t. Kérlek próbáld újra.
+DarknetConnectionsToadlet.nodePortsTitle=Port-ok amiket a freenet kliens használ.
+DarknetConnectionsToadlet.notConnected=Nem kapcsolódott: Egyáltalán nincs kapcsolat, de folyamatosan próbálkozunk, hogy legyen.
+DarknetConnectionsToadlet.notConnectedShort=Lekapcsolódott
+DarknetConnectionsToadlet.noTrustLevelAddingFriendTitle=Neked meg kell határoznod a barátodhoz tartozó bizalmi szintet.
+DarknetConnectionsToadlet.noTrustLevelAddingFriend=Állítsd be a bizalmi szintet - LOW, NORMAL or HIGH. Egyszerűen aszerint, hogy mennyire bízol a barátodban.. Magasabb bizalmi szint nagyobb teljesítményt ad, de kisebb a biztonság, ha a barátod úgy dönt "megtámad". pl.: Megpróbálja kitalálni, hogy mit csinálsz a Freenet-en. Ha csak nem régiben ismertétek meg egymást, akkor talán a LOW szintet válazd. Ha teljesen megbízol benne, akkor a HIGH-szintet. Ha tudod, hogy nem ellenőrzi rendszeresen a számítógépét és folyamatosan vírusokat kap stb. akkor talán csökkentened kéne a bizalmi szintet, vagy egyáltalán ne csatlakozz hozzá, mert valaki feltörheti a gépét.
+DarknetConnectionsToadlet.noVisibilityLevelAddingFriendTitle=Neked be kell állítanod a láthatósági szintet a barátaidhoz. 
+DarknetConnectionsToadlet.noVisibilityLevelAddingFriend=Neked be kell állítanod a láthatósági szinted a barátaidhoz - YES (your other friends can see them, provided they also have YES), NAME ONLY (they can see the name of the peer and offer to get connected if they know each other), or NO (your other friends cannot see this node). Making your friends visible to your friends improves performance and makes it easier to get connected both to Freenet and to people you know once you are on Freenet.
 DarknetConnectionsToadlet.opennetFnpPort=Opennet FNP: ${port}/UDP (used to connect to untrusted peers i.e. Strangers; forward this port if you can)
 DarknetConnectionsToadlet.pasteReference=Enter node reference directly:
 DarknetConnectionsToadlet.peersEnable=Enable selected peers
